feat: Implement core sentiment analysis system including React frontend, FastAPI backend, training data, and comprehensive documentation.

--- a/sentiment-analysis-system/frontend/package.json
+++ b/sentiment-analysis-system/frontend/package.json
@@ -10,6 +10,11 @@
     "chart.js": "^4.4.1",
     "react-chartjs-2": "^5.2.0"
   },
+  "devDependencies": {
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
