--- a/sentiment-analysis-system/backend/requirements.txt
+++ b/sentiment-analysis-system/backend/requirements.txt
@@ -4,8 +4,8 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 motor==3.3.2
 pymongo==4.6.0
-numpy==1.26.2
-pandas==2.1.3
+numpy
+pandas
 scikit-learn==1.3.2
 joblib==1.3.2
 python-dotenv==1.0.0
@@ -15,8 +15,6 @@ youtube-comment-downloader==0.1.72
 google-api-python-client==2.108.0
 python-multipart==0.0.6
 aiofiles==23.2.1
-
-# For transformer models (PhoBERT, etc.)
 torch>=2.0.0
 transformers>=4.30.0
 safetensors>=0.4.0
